# Hi3861ofXDU

app/: BUILD.gn
app/button_demo/: button_control.c
app/buzzer_demo/: BUILD.gn  motor_control.c
app/encoder_demo/: encoder_control.c
app/hcsr04_demo/: BUILD.gn  hcsr04.c
app/helloworld/: BUILD.gn  helloworld_demo.c
app/led_demo/: led_control.c
app/led_pwm_demo/: BUILD.gn  motor_control.c
app/lth1550_demo/: lth1550_control.c
app/motor_gpio_demo/: BUILD.gn  motor_gpio_demo.c
app/semaphore_demo/: BUILD.gn  semaphore_demo.c
app/timer_demo/: timer_demo.c
app/tricolor_lamp_demo/: tricolor_lamp_control.c
app/uart1/: uart_control.c
app/uart2/: uart_control.c
app/ultrasonic_motor/: motor_control.c
thread_demo/: BUILD.gn
uart1/: pca9555.h
uart2/: BUILD.gn  uart_control.c
