# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni") 
lite_component("app") { 
features = [ 
    # "startup",
    # "tricolor_lamp_demo:TraColorLampControl",
    # "encoder_demo:encoder_control",
    # "button_demo:button_control",
    # "hcsr04_demo:hcsr04_control",
    # "motor_demo:motor_control",
    # "led_pwm_demo:led_pwm_control",
    # "sg92r_demo:sg92r_control",
    # "buzzer_demo:buzzer_control",
    # "ultrasonic_motor:motor_control",
    # "cw2015_demo:cw2015_control",
    # "rtc_demo:rtc_control",
    # "nfc_demo:nfc_control",
    # "i2c_bus_demo:i2c_bus_demo",
    # "lth1550_demo:lth1550_control",
    # "uart_demo:uart_control",
    "uart2:uart_control",
    # "thread_demo:thread_control",
    ] 
}